# project_generator

./: LICENSE.txt  README.md  generate.py  generate_vgdb.py
PLACEHOLDER/: .gitignore  CMakeLists.txt  Doxyfile
PLACEHOLDER/PLACEHOLDER/: CMakeLists.txt
PLACEHOLDER/PLACEHOLDER/src/: main.cpp
PLACEHOLDER/cmake/: FindGoogleTest.cmake
PLACEHOLDER/libPLACEHOLDER/: CMakeLists.txt
PLACEHOLDER/libPLACEHOLDER_tests/: CMakeLists.txt
PLACEHOLDER_PROJECT_NAME/: .clang-format  .gitignore  Doxyfile  Makefile  PLACEHOLDER_PROJECT_NAME-ASan.vgdbsettings  PLACEHOLDER_PROJECT_NAME-Debug.vgdbsettings  PLACEHOLDER_PROJECT_NAME-MSan.vgdbsettings  PLACEHOLDER_PROJECT_NAME-Release.vgdbsettings  PLACEHOLDER_PROJECT_NAME-TSan.vgdbsettings  PLACEHOLDER_PROJECT_NAME-UBSan.vgdbsettings  PLACEHOLDER_PROJECT_NAME.vcxproj  README.md  asan.mak  debug.mak  gcc_Debug.h  gcc_Release.h  gcc_TSan.h  msan.mak  release.mak  tsan.mak  ubsan.mak
plchldr/: .clang-format  .gitmodules  CMakeLists.txt  Doxyfile  README.md
plchldr/cmake/: FindGoogleTest.cmake
plchldr/plchldr/: CMakeLists.txt
plchldr/plchldr/include/plchldr/: plchldr.h
plchldr/plchldr/src/: plchldr.cpp  plchldr.cu
plchldr/plchldr_bench/: CMakeLists.txt  bench_plchldr.cpp
plchldr/plchldr_cli/: CMakeLists.txt
plchldr/plchldr_cli/src/: main.cpp
plchldr/plchldr_gui/: CMakeLists.txt
plchldr/plchldr_gui/src/: main.cpp  main_window.cpp  main_window.h  main_window.ui
plchldr/plchldr_tests/: CMakeLists.txt  test_plchldr.cpp
plchldr/pyplchldr/: CMakeLists.txt  plchldr.py
plchldr/pyplchldr/src/: pyplchldr.cpp
